--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section> 
         <!-- header  -->
         <header class="sticky-top">
-            <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+            <nav class="navbar navbar-expand-lg navbar-light header-bgc">
               <div class="container-fluid">
                 <button class="navbar-toggler bg-white mx-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
                       <a class="nav-link active text-primary text-white m-2 text-uppercase fw-bold" aria-current="page" href="#"> Whitepaper</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link active text-primary text-white m-2 text-uppercase fw-bold" aria-current="page" href="#">Contact</a>
+                      <a class="nav-link active text-primary text-white m-2 text-uppercase fw-bold" aria-current="page" href="#contract">Contact</a>
                     </li> 
                   </ul>
                 </div>
@@ -60,11 +60,6 @@
             </nav>
           </header>  
       <!-- top banner  -->
-      <!-- <section class="top-banner">
-          <div>
-              
-          </div>
-      </section> -->
       <section class="container-fluid top-banner shap-banner">
           <div class="p-5 text-white">
              <h4  class="text-center mt-5">ATOKEN FOR WOMEN BY WOMEN TO CREATE</h4>
@@ -83,7 +78,7 @@
       </div>
          <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center p-5">
             <div>
-              <h1 class="heading-color sm-tx-center">Objective</h1>
+              <h1 class="heading-color sm-tx-center color pb-2">Objective</h1>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere voluptate inventore incidunt dolor necessitatibus accusantium consequatur eum aliquid delectus eveniet impedit vel, doloribus, quaerat ex maxime. Voluptas ut temporibus consequatur error aperiam illo mollitia minus deserunt quas numquam dolore, eligendi consectetur incidunt? Maiores asperiores dolorem ratione eos placeat rerum qui.</p>
             </div>
          </div>
@@ -94,7 +89,7 @@
         <div class="row mission-flex">
              <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center p-5">
                 <div class="p-3 ">
-                  <h1 class="heading-color mt-5 sm-tx-center">Mission</h1>
+                  <h1 class="heading-color mt-5 sm-tx-center color pb-2">Mission</h1>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere voluptate inventore incidunt dolor necessitatibus accusantium consequatur eum aliquid delectus eveniet impedit vel, doloribus, quaerat ex maxime. Voluptas ut temporibus consequatur error aperiam illo mollitia minus deserunt quas numquam dolore, eligendi consectetur incidunt? Maiores asperiores dolorem ratione eos placeat rerum qui.</p>
                 </div>
              </div>
@@ -106,12 +101,12 @@
     <!-- purpose section  -->
     <section class="Purpose-shap container-fluid" id="purpose" >
         <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-12 padding-img text-center">
+          <div class="col-lg-6 col-md-6 col-sm-12 mt-5 padding-img text-center">
               <img class="" src="images/purpose.png" alt="" width="80%" height="80%"> 
           </div>
              <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center p-5">
                 <div class="p-3">
-                  <h1 class="heading-color sm-tx-center">Purpose</h1>
+                  <h1 class="heading-color sm-tx-center color pb-2">Purpose</h1>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere voluptate inventore incidunt dolor necessitatibus accusantium consequatur eum aliquid delectus eveniet impedit vel, doloribus, quaerat ex maxime. aperiam illo mollitia minus deserunt quas numquam dolore, eligendi consectetur incidunt? Maiores asperiores dolorem ratione eos placeat rerum qui.</p>
                 </div>
              </div>
@@ -145,8 +140,8 @@
         <button class="tech-btt shadow-lg px-5 py-3"> Discover venus Token </button>
     </div>
 </section>
-<!-- contract section  -->
-<section class="container-fluid">
+<!-- contract section -->
+<section class="container-fluid" id="contract">
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12" >
         <p class="p-5"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7303.133074734309!2d90.360926!3d23.762832!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb7e7326b18f66025!2sWomen%20In%20Digital!5e0!3m2!1sen!2sbd!4v1646661877117!5m2!1sen!2sbd" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe></p>
@@ -164,7 +159,7 @@
   </section>
 <!-- footer section  -->
 <footer class="bg-color">
-    <p class="text-white fw-bold p-3 text-center align-middle m-0">&copy All Right Reserved By <span class="text-warning">Md.Yousuf</span></p>
+    <p class="text-white  p-3 text-center align-middle m-0 fs-4">&copy All Right Reserved By <span class="text-warning">Md.Yousuf</span></p>
 </footer>
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
